# OneTV_Movie_Supabase

./: .gitignore  CHANGELOG.md  MOVIE_BUG_FIX_REPORT.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  vod_complete_resource_report_20250716_191953.txt  vod_resource_rename_report_20250716_185006.txt  vod_resource_rename_report_20250716_190048.txt  vod_resource_rename_report_20250716_190202.txt  vod_resource_rename_report_20250716_190241.txt
.github/workflows/: ci-cd-status.yml
core/data/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/util/: build.gradle.kts
film/: CLASS_REFERENCE_VERIFICATION.md  ENHANCED_PARSERS_IMPLEMENTATION_REPORT.md  FILMAPP_ADAPTATION_REPORT.md  PARSER_CLEANUP_REPORT.md  build.gradle.kts  consumer-rules.pro  test-film-system.sh
film/src/main/: AndroidManifest.xml
film/src/main/cpp/: CMakeLists.txt  build-test.sh  http-bridge.cpp  jsoup-bridge.cpp  quickjs-android.cpp  setup-deps.sh  spider-bridge.cpp  verify-files.bat  verify-files.ps1
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mobile/: build.gradle.kts
mobile/src/main/: AndroidManifest.xml
movie/: build.gradle.kts  consumer-rules.pro  create_structure.bat  proguard-rules.pro
movie/src/main/assets/: initial_config_template.json
movie/src/main/vod_res/vod_drawable/: vod_ic_live_pass.xml
movie/src/main/vod_res_processed/drawable/: .gitkeep
movie/src/main/vod_res_processed/values/: vod_strings.xml
movieMD/: OneTV_Supabase_项目架构分析.md
onevod/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
onevod/catvod/: build.gradle.kts
onevod/chaquo/: build.gradle.kts
onevod/forcetech/: build.gradle.kts
onevod/hook/: build.gradle.kts
onevod/jianpian/: build.gradle.kts
onevod/quickjs/: build.gradle.kts
onevod/schemas/top.cywin.onetv.tv.db.AppDatabase/: 33.json
onevod/src/leanback/: AndroidManifest.xml
onevod/src/leanback/res/layout/: activity_collect.xml  activity_file.xml  activity_home.xml  activity_live.xml  activity_search.xml  activity_video.xml  activity_vod.xml  adapter_channel.xml  adapter_epg_data.xml  adapter_type.xml  dialog_config.xml  dialog_danmaku.xml  dialog_doh.xml  dialog_live.xml  dialog_proxy.xml  dialog_restore.xml  (+7 more)
onevod/src/main/: AndroidManifest.xml
onevod/src/mobile/: AndroidManifest.xml
onevod/thunder/: build.gradle.kts
onevod/tvbus/: build.gradle.kts
scripts/: complete_vod_resources.py  demo_vod_resources.py  rename_vod_resources.py  test_vod_resources.py  vod_resource_setup.py
supabase/functions/vod-config/: index.ts
tv/: build.gradle.kts
tv/src/main/: AndroidManifest.xml
vod/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
vod/catvod/: build.gradle.kts
vod/chaquo/: build.gradle.kts
vod/forcetech/: build.gradle.kts
vod/forcetech/src/main/: AndroidManifest.xml
vod/hook/: build.gradle.kts
vod/jianpian/: build.gradle.kts
vod/quickjs/: build.gradle.kts
vod/src/leanback/: AndroidManifest.xml
vod/thunder/: build.gradle.kts
vod/tvbus/: build.gradle.kts
vodMD/: 00_日志.txt  01_FongMi_TV项目集成onevod模块实施方案_20250714.md  02_FongMi_TV集成onevod模块执行脚本_20250714.md  03_onevod子模块配置详细说明_20250714.md  04_onevod模块完整文件结构分析_20250714.md  05_onevod模块完整文件树结构_20250714.md
(+1589 files in other folders)
